--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/myh2o?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=Myh2o2017
+#spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 ## Mybatis 配置
