--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 ## 数据源配置
 #spring.datasource.url=jdbc:mysql://localhost:3306/myh2o?useUnicode=true&characterEncoding=utf8
-spring.datasource.url=jdbc:mysql://cdb-pappuj6p.gz.tencentcdb.com:10031/myh2o?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://${host}:${port}/myh2o?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 #spring.datasource.password=Myh2o2017
-spring.datasource.password=8888+8888=17776
+spring.datasource.password=${pwd}
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+#cdb-pappuj6p.gz.tencentcdb.com:10031
 ## Mybatis 配置
 mybatis.typeAliasesPackage=org.spring.springboot.domain
 mybatis.mapperLocations=classpath:mapper/*.xml
