[UPDATE] Change properties file

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## Mybatis 配置
 mybatis.typeAliasesPackage=org.spring.springboot.domain
 mybatis.mapperLocations=classpath:mapper/*.xml
+## 端口配置
+server.port=8800
