--- a/pom.xml
+++ b/pom.xml
@@ -127,5 +127,11 @@
             <artifactId>qiniu-java-sdk</artifactId>
             <version>[7.0.0, 7.2.99]</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 </project>
