--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,15 @@ mybatis.typeAliasesPackage=org.spring.springboot.domain
 mybatis.mapperLocations=classpath:mapper/*.xml
 ## 端口配置
 server.port=8800
+spring.mail.host=smtp.exmail.qq.com
+spring.mail.username=dataaccount@myh2o.org
+spring.mail.password=123456Aa
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+# ssl 配置
+spring.mail.port=465
+spring.mail.default-encoding=UTF-8
+spring.mail.properties.mail.smtp.ssl.enable=true
+spring.mail.properties.mail.imap.ssl.socketFactory.fallback=false
+spring.mail.properties.mail.smtp.ssl.socketFactory.class=org.spring.springboot.util.MailSSLSocketFactory
