--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,12 @@
+# jasypt
+jasypt.encryptor.password=SABER
+jasypt.encryptor.algorithm=PBEWithMD5AndDES
 ## 数据源配置
 #spring.datasource.url=jdbc:mysql://localhost:3306/myh2o?useUnicode=true&characterEncoding=utf8
 spring.datasource.url=jdbc:mysql://${host}:${port}/myh2o?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 #spring.datasource.password=Myh2o2017
-spring.datasource.password=${pwd}
+spring.datasource.password=ENC(fsRkz6yIE+tVR7ZV/43p5w==)  
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 ## Mybatis 配置
 mybatis.typeAliasesPackage=org.spring.springboot.domain
@@ -12,7 +15,7 @@ mybatis.mapperLocations=classpath:mapper/*.xml
 server.port=8800
 spring.mail.host=smtp.exmail.qq.com
 spring.mail.username=dataaccount@myh2o.org
-spring.mail.password=123456Aa
+spring.mail.password=ENC(xXSDiXdXZzc78HxfG+y4g7LQ22HiShJJ)
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
@@ -22,3 +25,4 @@ spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.imap.ssl.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.ssl.socketFactory.class=org.spring.springboot.util.MailSSLSocketFactory
+
