[UPDATE] Change spring config

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,4 +25,5 @@ spring.mail.default-encoding=UTF-8
 spring.mail.properties.mail.smtp.ssl.enable=true
 spring.mail.properties.mail.imap.ssl.socketFactory.fallback=false
 spring.mail.properties.mail.smtp.ssl.socketFactory.class=org.spring.springboot.util.MailSSLSocketFactory
+spring.mvc.dispatch-options-request=true
 
